# local-nix-ci

./: .aider.chat.history.md  .aider.input.history  .gitignore  BlockstreamResearch.Simplicity.check-pr.nix  BlockstreamResearch.hal-simplicity.check-pr.nix  BlockstreamResearch.rust-secp256k1-zkp.check-pr.nix  BlockstreamResearch.rust-simplicity.check-pr.nix  BlockstreamResearch.s-lang.check-pr.nix  BlockstreamResearch.secp256k1-zkp.check-pr.nix  BlockstreamResearch.simplicity-webide.check-pr.nix  ElementsProject.elements-miniscript.check-pr.nix  ElementsProject.elements.check-pr.nix  ElementsProject.rust-ctaes.check-pr.nix  ElementsProject.rust-elements.check-pr.nix  ElementsProject.rust-secp256k1-zkp.check-pr.nix  README  README.md  andrew-utils.nix  bitcoin.secp256k1.check-pr.nix  generate-repo-json.sh  honggfuzz-rs.nix  label-pr.sh  queue.sh  rust-bitcoin.corepc.check-pr.nix  rust-bitcoin.hex-conservative.check-pr.nix  rust-bitcoin.ordered.check-pr.nix  rust-bitcoin.rust-bech32.check-pr.nix  rust-bitcoin.rust-bitcoin.check-pr.nix  rust-bitcoin.rust-bitcoinconsensus.check-pr.nix  rust-bitcoin.rust-bitcoincore-rpc.check-pr.nix  rust-bitcoin.rust-bitcoind-json-rpc.check-pr.nix  rust-bitcoin.rust-jsonrpc.check-pr.nix  rust-bitcoin.rust-miniscript.check-pr.nix  rust-bitcoin.rust-ordered.check-pr.nix  rust-bitcoin.rust-psbt-v0.check-pr.nix  rust-bitcoin.rust-secp256k1.check-pr.nix  rust.check-pr.nix  sanity-check.sh  show-derivations.sh  test-pr.sh  (+1 more)
.aider.tags.cache.v4/: cache.db
crate2nix/: old-tools.nix  tools.nix
patches/: elements-001.patch  elements-002.patch  elements-003.patch  rust-secp.patch
postgres/: Cargo.toml
postgres/doc/: stack-management.txt
postgres/doc/state-machine/: acks.txt  commit.txt  pull_request.txt  stack.txt
postgres/lcilib/: Cargo.toml
postgres/lcilib/sql/: schema_v1.sql
postgres/lcilib/src/: lib.rs
postgres/lcilib/src/db/: mod.rs  models.rs  operations.rs  schema.rs  util.rs
postgres/lcilib/src/db/models/: ack.rs  allowed_approver.rs  commit.rs  log.rs  log_entry.rs  mod.rs  pr_commit.rs  pull_request.rs  repository.rs  stack.rs  user_priority_offset.rs
postgres/lcilib/src/db/models/repository/: mod.rs  shell.rs
postgres/lcilib/src/gh/: mod.rs  serde_types.rs
postgres/lcilib/src/git/: merge_description.rs  mod.rs
postgres/lcilib/src/jj/: change_id.rs  mod.rs
postgres/lcilib/src/repo/: mod.rs
postgres/local-ci/: Cargo.toml
postgres/local-ci/src/: commit.rs  daemon.rs  main.rs  pr.rs  repo_info.rs  terminal.rs
postgres/local-ci/src/args/: lexer.rs  mod.rs
postgres/local-ci/src/daemon/: build_derivation.rs  ci_cycle.rs  log.rs  mod.rs  stacks.rs  util.rs
postgres/local-ci/src/terminal/: colorable.rs  mod.rs
prompts/: design-docs  schema
sqlite/: check-and-sign.sh  compute_merge_description.py  compute_sha512_root.py  create-cargo-nix.sh  local-ci.sh  queue-merge.py  schema.txt
taskwarrior/: create-cargo-nix.sh  create-merge-commit.sh  init.sh  local-ci.sh  queue.sh  run.sh
tw-rs/: Cargo.toml
tw-rs/forgejo-api/: Cargo.toml
tw-rs/forgejo-api/src/: endpoints.rs  lib.rs  methods.rs  methods_sync.rs  structs.rs
tw-rs/src/: main.rs
tw-rs/src/args/: lexer.rs  mod.rs
tw-rs/src/gh/: merge_description.rs  mod.rs  serde_types.rs
tw-rs/src/git/: mod.rs
tw-rs/src/jj/: mod.rs
tw-rs/src/repo/: mod.rs
tw-rs/src/run/: log.rs  merge_description.rs  mod.rs  state.rs  task.rs
tw-rs/src/tw/: collection.rs  mod.rs  serde_types.rs  shell.rs  task.rs
tw-rs/tw-rs/: Cargo.toml  README.md
tw-rs/tw-rs/src/: main.rs
tw-rs/tw-rs/src/args/: lexer.rs  mod.rs
tw-rs/tw-rs/src/gh/: merge_description.rs  mod.rs  serde_types.rs
tw-rs/tw-rs/src/jj/: mod.rs
tw-rs/tw-rs/src/repo/: mod.rs
tw-rs/tw-rs/src/run/: log.rs  mod.rs  task.rs
tw-rs/tw-rs/src/tw/: collection.rs  mod.rs  serde_types.rs  shell.rs  task.rs
