[package]
name = "lcilib"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin_hashes = { version = "0.18", default-features = false, features = [ "hex", "serde", "std" ] }
chrono = { version = "0.4.44", default-features = false, features = [ "now" ] }
serde = { version = "1.0.156", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0.149", default-features = false, features = [ "std" ] }
tokio = { version = "1.50.0", default-features = false, features = [ "rt" ] }
# Tokio-postgres brings in 83 dependencies. But apparently that's the cost of using async Rust.
tokio-postgres = { version = "0.7.16", default-features = false, features = [ "runtime", "with-chrono-0_4" ] }
xshell = { version = "0.2", default-features = false }

[lints]
workspace = true
