[package]
name = "local-ci"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.44", default-features = false, features = [ "now" ] }
tokio = { version = "1.50.0", default-features = false, features = [ "macros", "rt-multi-thread" ] }
lcilib = { path = "../lcilib/", default-features = false }
xshell = { version = "0.2", default-features = false }

[lints]
workspace = true
