[package]
name = "forgejo-api"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { version = "1.5.0", default-features = false, features = [ ] }
thiserror = { version = "1.0.43", default-features = false, features = [ ] }
time = { version = "0.3.26", default-features = false, features = [ "parsing", "serde", "formatting" ] }
serde = { version = "1.0.168", default-features = false, features = [ "derive", "std" ] }
serde_json = { version = "1.0.108", default-fetaures = false }
urlencoding = { version = "2.1.3", default-features = false }

[lints]
workspace = true
